Configuracion extra de supervisor_twiddler y otras herramientas

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,8 @@ parts =
     zope_conf_deploy
     zpasswd
     interactive_debugger
+    omelette
+    mkcodeintel
 newest = false
 versions = versions
 # eggs will be installed in the default buildout location
@@ -27,6 +29,8 @@ extensions += buildout.dumppickedversions
 
 [versions]
 # Override versions here.
+zope.fanstatic = 0.12
+fanstatic = 0.11.3
 
 [app]
 recipe = z3c.recipe.scripts
@@ -41,7 +45,7 @@ interpreter = python-console
 recipe = collective.recipe.scriptgen
 cmd = ${buildout:bin-directory}/paster
 arguments = serve ${buildout:parts-directory}/etc/deploy.ini
-    --daemon --pid-file=${buildout:directory}/var/daemon.pid
+    --pid-file=${buildout:directory}/var/daemon.pid
     --log-file=${buildout:directory}/var/log/daemon.log
 
 [paster_ini_debug]
@@ -103,6 +107,17 @@ recipe = collective.recipe.template
 output = ${buildout:parts-directory}/etc/zope.deploy.conf
 devmode = off
 
+[supervisor]
+#Instalar supervisor-twiddler en virtualenv o en el system python
+recipe = collective.recipe.supervisor
+port = 9000
+user = admin
+password = admin
+plugins = supervisor-twiddler
+programs =
+    10 grok ${buildout:bin-directory}/daemon ${buildout:directory} true
+include = ${buildout:directory}/etc/twiddler.cfg
+
 # This section is named so that the zpasswd utility is
 # called `zpasswd`
 [zpasswd]
@@ -119,3 +134,13 @@ eggs = spionisto
 entry-points =
   interactive_debugger=grokcore.startup.startup:interactive_debug_prompt
 arguments = zope_conf="${zope_conf_debug:output}"
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs =
+    ${app:eggs}
+
+[mkcodeintel]
+#This part is for mkcodeintel plugin for sublimetext editor
+recipe = plone.recipe.command
+command = python mkcodeintel.py
