generate own supervisor.ini

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ parts =
     zope_conf_debug
     zope_conf_deploy
     supervisor
+    supervisor_ini
     zpasswd
     interactive_debugger
     omelette
@@ -110,14 +111,16 @@ devmode = off
 
 [supervisor]
 #Instalar supervisor-twiddler en virtualenv o en el system python
-recipe = collective.recipe.supervisor
+recipe = zc.recipe.egg
+eggs = 
+  supervisor
+  supervisor-twiddler
+
+[supervisor_ini]
+recipe = collective.recipe.template
+input = etc/supervisord.conf.in
+output = ${buildout:parts-directory}/etc/supervisord.conf
 port = 9000
-user = admin
-password = admin
-plugins = supervisor-twiddler
-programs =
-    10 grok ${buildout:bin-directory}/daemon ${buildout:directory} true
-include = ${buildout:directory}/etc/twiddler.cfg
 
 # This section is named so that the zpasswd utility is
 # called `zpasswd`
