Include var/extends-cache directory so buildout won't complain about this

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = http://grok.zope.org/releaseinfo/1.4.1/versions.cfg
-extends-cache = extends-cache
+extends-cache = ${buildout:directory}/var/extends-cache
 include-site-packages = false
 develop = .
 unzip = true
