--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extends = http://grok.zope.org/releaseinfo/1.4.1/versions.cfg
-extends-cache = ${buildout:directory}/var/extends-cache
+extends-cache = var/extends-cache
+develop-eggs-directory = ${buildout:directory}/var/develop-eggs
 include-site-packages = false
 develop = .
 unzip = true
