Tweaks to supervisord configuration and add an easy start command

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ unzip = true
 parts =
     app
     daemon
+    start
     paster_ini_debug
     paster_ini_deploy
     i18n
@@ -50,6 +51,17 @@ cmd = ${buildout:bin-directory}/paster
 arguments = serve ${buildout:parts-directory}/etc/deploy.ini
     --pid-file=${buildout:directory}/var/daemon.pid
     --log-file=${buildout:directory}/var/log/daemon.log
+
+
+[start]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    bin/supervisord -c parts/etc/supervisord.conf
+    #
+output = ${buildout:bin-directory}/start
+mode = 755
+
 
 [paster_ini_debug]
 recipe = collective.recipe.template
