--- a/etc/supervisord.conf.in
+++ b/etc/supervisord.conf.in
@@ -11,7 +11,7 @@ logfile_backups = 10
 loglevel = info
 pidfile = ${buildout:directory}/var/supervisord.pid
 umask = 022
-nodaemon = false
+nodaemon = true
 nocleanup = false
 
 [rpcinterface:supervisor]
