--- a/buildout.cfg
+++ b/buildout.cfg
@@ -90,6 +90,7 @@ zcml =
 recipe = z3c.recipe.mkdir
 paths =
     ${buildout:directory}/var/log
+    ${buildout:directory}/var/run
     ${zope_conf:filestorage}
     ${zope_conf:blobstorage}
 
